--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,6 +1,22 @@
 // Overrides Default Bootstrap Variables
 @import "variables";
 
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  padding: 48px 0 0;
+}
+
+@media (max-width: 767.98px) {
+  .sidebar {
+    top: 4rem;
+  }
+}
+
 // Bootstrap
 // @import "../vendor/bootstrap-source/scss/bootstrap.scss";
 
